--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.data.mongodb.uri=mongodb+srv://kwtr-mongodb:cPc9sKhVfv5VpRE@kwtr-cluster.f42nfyr.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=Posts
 
-auth0.audience=https://kwtr-auth.example.com
-auth0.domain=dev-3z8rggnx.eu.auth0.com
-spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
+#auth0.audience=https://kwtr-auth.example.com
+#auth0.domain=dev-3z8rggnx.eu.auth0.com
+#spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
