--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,9 +5,12 @@ name: Java CI with Maven
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - 'master'
+      - 'release*'
+#    branches: [ "main" ]
+#  pull_request:
+#    branches: [ "main" ]
     
 jobs:
   build:
@@ -23,3 +26,11 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: Maven Package
+      run: mvn -B clean package -DskipTests
+    - name: Maven test
+      run: mvn test
+    - name: Maven Verify
+      run: mvn -B clean verify
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml -DskipTests
