--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,7 +53,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   deploy:
     name: deploy app
-    needs: [build, sonar]
+    needs: [sonar]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -65,11 +65,12 @@ jobs:
         run: |
           docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
       - name: build the docker image
-        run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/comment-service
+        run: docker build . --file Dockerfile --tag ${{secrets.DOCKER_USER}}/post-service
       - name: Docker push
-        run: docker push ${{secrets.DOCKER_USER}}/comment-service
+        run: docker push ${{secrets.DOCKER_USER}}/post-service
   digitalocean:
     name: Install doctl
+    needs: [deploy]
     runs-on: ubuntu-latest
     steps:
       - uses: digitalocean/action-doctl@v2
